--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
   <body>
     <main>
       <div class="card">
-        <div class="img-container">
+        <div class="img container">
           <img src="./assets/images/avatar-jessica.jpeg" alt="avatar" />
         </div>
-        <div class="info-container">
+        <div class="info container">
           <h1>Jessica Randall</h1>
           <address>London, United Kingdom</address>
           <p>"Front-end developer and avid reader."</p>
         </div>
-        <div class="link-container">
+        <div class="link container">
           <ol>
             <li><a href="#" target="_blank">GitHub</a></li>
             <li><a href="#" target="_blank">Frontend Mentor</a></li>
